# ecat_motion

./: README.md
install/: local_setup.sh  setup.sh
install/ecat_motion/lib/ecat_motion/: node_motor_controller
install/ecat_motion/share/ament_index/resource_index/parent_prefix_path/: ecat_motion
install/ecat_motion/share/ecat_motion/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ecat_motion/share/ecat_motion/cmake/: ecat_motionConfig.cmake
log/: latest_build
src/motor_control_test/: CMakeLists.txt  ParamsInit.cmake  Readme.txt  async_control_test.c  config_file  sync_control1601_test.c  sync_control_test.c
src/motor_control_test/include/: motor_controller.h  zy_motor_controller.h
src/motor_control_test/src/: motor_controller.cpp  node_motor_controller.cpp  zy_motor_controller.cpp
src/sdk/include/: pci_dbg.h  pci_errno.h  pci_zecm.h
